Deployment from Statiq

--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -1,23 +1,21 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html><html><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="/assets/bootstrap/bootstrap.css" rel="stylesheet" />
-    <link href="/assets/css/styles.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet" data-no-mirror>
+    <link href="/assets/bootstrap/bootstrap.css" rel="stylesheet">
+    <link href="/assets/css/styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&amp;family=Roboto+Slab:wght@400;700&amp;family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&amp;display=swap" rel="stylesheet" data-no-mirror="">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/themes/prism.css">
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/a1cad7ed9a.js" crossorigin="anonymous" data-no-mirror></script>
+    <script src="https://kit.fontawesome.com/a1cad7ed9a.js" crossorigin="anonymous" data-no-mirror=""></script>
     <script src="https://cdn.jsdelivr.net/npm/mermaid@8.4.8/dist/mermaid.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/svg-pan-zoom@3.6.1/dist/svg-pan-zoom.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror=""></script>
 
     <title>Shiny.NET - Getting Started</title>
 </head>
@@ -120,6 +118,69 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/notifications">Notifications (Local)</a>                                            </div>
+                                                <div class="sidebar-nav-children active">
+                                                        <div class="sidebar-nav-child active">
+                                                            <a href="/notifications/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/notifications/androidspecific">Android Specifics</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/notifications/channels">Channels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/notifications/delegate">Events and Delegates</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/push">Notifications (Push)</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/push/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/push/native">Native</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/push/azure">Azure Notification Hubs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/push/firebase">Firebase Messaging</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/push/aws">AWS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/push/onesignal">One Signal</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -215,69 +276,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/notifications">Notifications (Local)</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
-                                                        <div class="sidebar-nav-child active">
-                                                            <a href="/notifications/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/notifications/androidspecific">Android Specifics</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/notifications/channels">Channels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/notifications/delegate">Events and Delegates</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/push">Notifications (Push)</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/native">Native</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/azure">Azure Notification Hubs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/firebase">Firebase Messaging</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/aws">AWS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/onesignal">One Signal</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -348,7 +346,9 @@
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4">
-                                    <p>Notifications are a great way of letting your users know your app just figured something out in the background.  Thus, Shiny needed a decent local notification library.</p>
+                                    <p>You may ask "what does local notifications" have to do with device or background services?  Well.... turns out quite a bit.  You need a way
+of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
+to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
 <table>
 <thead>
 <tr>
@@ -359,7 +359,7 @@
 <tbody>
 <tr>
 <td><strong>NuGet</strong></td>
-<td><a href="https://www.nuget.org/packages/Shiny.Notifications/" target="Shiny.Notifications"><img src="https://img.shields.io/nuget/v/Shiny.Notifications.svg?style=for-the-badge&label=Shiny.Notifications" /></a></td>
+<td><a href="https://www.nuget.org/packages/Shiny.Notifications/" target="Shiny.Notifications"><img src="https://img.shields.io/nuget/v/Shiny.Notifications.svg?style=for-the-badge&amp;label=Shiny.Notifications"></a></td>
 </tr>
 <tr>
 <td><strong>Service</strong></td>
@@ -391,6 +391,24 @@
 </tr>
 </tbody>
 </table>
+<h2 id="ios-specifics">iOS Specifics</h2>
+<p>There isn't anything specific to setting up local notifications on iOS.  However,
+iOS has one specific rule - While the application  is running in the <strong>FOREGROUND</strong>, notifications will not be displayed.
+You are responsible for notifying your users of actions happening while your app is running.</p>
+<h2 id="android-specifics">Android Specifics</h2>
+<p>Android has many different customization points - please review the <a href="/notifications/androidspecific">Android Specifics Documentation</a></p>
+<h1 id="notifications">Notifications</h1>
+<p>First rule, as with any Shiny service.  Run RequestAccess</p>
+<pre><code class="language-csharp">var result = await NotificationManager.RequestAccess();
+if (result == PermissionState.Available) {
+    // ... do something
+}
+</code></pre>
+<h2 id="send-a-notification">Send a Notification</h2>
+<h2 id="scheduling-a-notification">Scheduling a Notification</h2>
+<h2 id="getting-a-list-of-pending-notifications">Getting A List of Pending Notifications</h2>
+<h2 id="cancelling-individual-or-all-pending-notifications">Cancelling Individual or All Pending Notifications</h2>
+<h2 id="notification-responses">Notification Responses</h2>
 <pre><code class="language-cs">using System.Threading.Tasks;
 using Shiny.Notifications;
 
@@ -399,18 +417,9 @@ public class NotificationDelegate : INotificationDelegate
     public async Task OnEntry(NotificationResponse response)
     {
     }
-
-    public async Task OnReceived(Notification notification)
-    {
-    }
 }
 
 </code></pre>
-<h1 id="notifications">Notifications</h1>
-<h2 id="send-a-notification">Send a Notification</h2>
-<h2 id="scheduling-a-notification">Scheduling a Notification</h2>
-<h2 id="getting-a-list-of-pending-notifications">Getting A List of Pending Notifications</h2>
-<h2 id="cancelling-individual-or-all-pending-notifications">Cancelling Individual or All Pending Notifications</h2>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
@@ -476,5 +485,5 @@ public class NotificationDelegate : INotificationDelegate
             }
         });
     </script>
-</body>
-</html>
+
+</body></html>
