--- a/push/getting-started.html
+++ b/push/getting-started.html
@@ -120,6 +120,69 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/notifications">Notifications (Local)</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/notifications/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/notifications/androidspecific">Android Specifics</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/notifications/channels">Channels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/notifications/delegate">Events and Delegates</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/push">Notifications (Push)</a>                                            </div>
+                                                <div class="sidebar-nav-children active">
+                                                        <div class="sidebar-nav-child active">
+                                                            <a href="/push/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/push/native">Native</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/push/azure">Azure Notification Hubs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/push/firebase">Firebase Messaging</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/push/aws">AWS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/push/onesignal">One Signal</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -215,69 +278,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/notifications">Notifications (Local)</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/notifications/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/notifications/androidspecific">Android Specifics</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/notifications/channels">Channels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/notifications/delegate">Events and Delegates</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/push">Notifications (Push)</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
-                                                        <div class="sidebar-nav-child active">
-                                                            <a href="/push/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/native">Native</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/azure">Azure Notification Hubs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/firebase">Firebase Messaging</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/aws">AWS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/onesignal">One Signal</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -348,9 +348,10 @@
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4">
-                                    <h1 id="push">Push</h1>
-<p>Push notifications come in so many flavours these days.  The community needed one way of doing things, but the ability to swap providers in and out at will.  The reason, push providers, aside from native have been dropping
+                                    <p>Push notifications come in so many flavours these days.  The community needed one way of doing things, but the ability to swap providers in and out at will.  The reason, push providers, aside from native have been dropping
 like flies the last several years.  The latest to go was AppCenter which it turns out the Xamarin community was heavily invested in.</p>
+<h2 id="setup">Setup</h2>
+<p>General OS setup is mostly the same on all platforms, but please review the specific provider you intend to use from the menu for more information</p>
 <h2 id="registration">Registration</h2>
 <p>Look to each appropriate provider to see setups for each.  The most important function otherwise, is RequestAccess shown below which will give you the push notification token that you can send to your backend.</p>
 <pre><code class="language-cs">using System;
@@ -397,22 +398,6 @@ public class PushRegistration
 
 </code></pre>
 <h2 id="background-delegate">Background Delegate</h2>
-<pre><code class="language-cs">using System;
-using System.Collections.Generic;
-using System.Threading.Tasks;
-
-
-namespace Shiny.Push
-{
-    public interface IPushDelegate
-    {
-        Task OnEntry(PushEntryArgs args);
-        Task OnReceived(IDictionary&lt;string, string&gt; data);
-        Task OnTokenChanged(string token);
-    }
-}
-
-</code></pre>
 <pre><code class="language-cs">using System;
 using System.Collections.Generic;
 using System.Threading.Tasks;
@@ -493,10 +478,6 @@ public class Extensions
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                        <div class="border-bottom mb-3">
-                                            <p class="small font-weight-bold">On This Page</p>
-                                                <p class="small"><a href="#push">Push</a></p>
-                                        </div>
                             </div>
                         </div>
                     </div>
