--- a/push/native.html
+++ b/push/native.html
@@ -120,6 +120,69 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
+<a href="/notifications">Notifications (Local)</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/notifications/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/notifications/androidspecific">Android Specifics</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/notifications/channels">Channels</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/notifications/delegate">Events and Delegates</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/push">Notifications (Push)</a>                                            </div>
+                                                <div class="sidebar-nav-children active">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/push/getting-started">Getting Started</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child active">
+                                                            <a href="/push/native">Native</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/push/azure">Azure Notification Hubs</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/push/firebase">Firebase Messaging</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/push/aws">AWS</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/push/onesignal">One Signal</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
+<a href="/other">Other</a>                                            </div>
+                                                <div class="sidebar-nav-children">
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/connectivity">Connectivity</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/keyvalue">Key/Value Stores</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/messagebus">Message Bus</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/power">Power Management</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/speech-recognition">Speech Recognition</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/other/sqlite">SQLite Integrations</a>
+                                                        </div>
+                                                </div>
+                                            <div class="sidebar-nav-item has-children">
 <a href="/beacons">Beacons</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -215,69 +278,6 @@
                                                         </div>
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
-<a href="/notifications">Notifications (Local)</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/notifications/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/notifications/androidspecific">Android Specifics</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/notifications/channels">Channels</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/notifications/delegate">Events and Delegates</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/connectivity">Connectivity</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/keyvalue">Key/Value Stores</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/messagebus">Message Bus</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/nfc">NFC</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/power">Power Management</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/speech-recognition">Speech Recognition</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/other/sqlite">SQLite Integrations</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
-<a href="/push">Notifications (Push)</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/getting-started">Getting Started</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child active">
-                                                            <a href="/push/native">Native</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/azure">Azure Notification Hubs</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/firebase">Firebase Messaging</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/aws">AWS</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/onesignal">One Signal</a>
-                                                        </div>
-                                                </div>
-                                            <div class="sidebar-nav-item has-children">
 <a href="/sensors">Sensors</a>                                            </div>
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
@@ -348,7 +348,8 @@
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4">
-                                    <h1 id="todo">TODO</h1>
+                                    <p>Native push is the root of all other push providers.  It works at the native OS level and is usually feeding other providers like Azure Notification Hubs and Firebase.  As such, the setup instructions found
+within this document generally apply to all.</p>
 <table>
 <thead>
 <tr>
@@ -391,13 +392,33 @@
 </tr>
 </tbody>
 </table>
+<h2 id="native-push-provider">Native Push Provider</h2>
+<p>If you don't intend to use a 3rd party provider, this library still uses everything applied from &quot;Getting Started&quot;.  To register it with Shiny, simply do the following in your Shiny Startup:</p>
+<pre><code class="language-csharp">services.UsePush&lt;MyPushDelegate&gt;();
+</code></pre>
+<h2 id="android-setup">Android Setup</h2>
+<p>The process of setting up Android is a bit of process</p>
+<pre><code class="language-csharp">&lt;ItemGroup&gt;
+    &lt;GoogleServicesJson Include=&quot;google-services.json&quot;&gt;
+        &lt;CopyToOutputDirectory&gt;PreserveNewest&lt;/CopyToOutputDirectory&gt;
+    &lt;/GoogleServicesJson&gt;
+    &lt;PackageReference Include=&quot;Xamarin.GooglePlayServices.Basement&quot; Version=&quot;The same version Shiny.Push is using&quot; /&gt;
+    &lt;PackageReference Include=&quot;Xamarin.GooglePlayServices.Tasks&quot; Version=&quot;The same version Shiny.Push is using&quot; /&gt;
+&lt;/ItemGroup&gt;
+
+</code></pre>
+<h2 id="ios-specific">iOS Specific</h2>
+<ol>
+<li>Add the following to your Info.plist</li>
+</ol>
+<pre><code class="language-xml"></code></pre>
+<ol start="2">
+<li>Add the following to your Entitlements.plist</li>
+</ol>
+<pre><code class="language-xml"></code></pre>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                        <div class="border-bottom mb-3">
-                                            <p class="small font-weight-bold">On This Page</p>
-                                                <p class="small"><a href="#todo">TODO</a></p>
-                                        </div>
                             </div>
                         </div>
                     </div>
